--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,6 +1,6 @@
 {% extends "core/base.html" %}
 
-{% block title}Login{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block content %}
   <h1> Log-In</h1>
