--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -11,6 +11,12 @@
 <body>
 	<header class="header">
 	  <span class="logo">F&Q</span>
+	  {% if user.is_authenticated %}
+	    <a href="{% url "logout" %}">Logout</a>
+	  {% else %}
+	    <a href="{% url "login" %}">Log-in</a>
+	  {% endif %}
+
 	</header>
 
   {% block content %}
