--- a/core/static/core/base.css
+++ b/core/static/core/base.css
@@ -1,10 +1,12 @@
 .header {
 	background-color: #738BCE;
-	display: grid;
-	grid-template-columns: 20% 20% 20% 20% 20%;
+	color: #8CD894;
 }
 
-.menu {
-	grid-start: 1;
-	grid-column-end: span 2;
+.footer {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: flex-end;
+	background-color: #8CD894;
 }
