--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,5 +1,5 @@
 {% extends 'core/base.html' %}
-{% load static %}
+{% load static %} 
 
 {% block title %}Fast & Quizy{% endblock %}
 {% block css %}
@@ -7,58 +7,30 @@
 {% endblock %}
 
 {% block content %}
-  <div class="first">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-  
-    <div class="presentation">
-      <h1 class="text-center font-bold italic text-6xl text-gray-300">Fast & Quizy</h1>
-      <p class="text-center text-2xl text-gray-300">
-      	Ici vous pourrez <br>
-      	participer à des quiz dans des domaines variés <br>
-        et obtenir des conseils personnalisés</p>
+<div class='container mx-auto'>
+  <div class="flex content-start flex-wrap bg-gray-200">
+    <div class="w-1/3 p-2">
+      <div class="bg-gray-400 p-2 h-40 rounded-lg">
+        <div class="text-gray-700 text-center truncate">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST
+        </div>
+        <div class="row">
+          <img class="object-none object-bottom pt-16 pl-48" src="../../static/core/img/etoile.png" alt="etoile">
+          <img class="object-none object-bottom" src="../../static/core/img/etoile.png" alt="etoile">
+        </div>
+      </div>
     </div>
-    <br>
-    <br>
-    <div class="button">
-      <button class="bg-yellow-400 hover:bg-orange-400 text-white font-bold py-2 px-4 rounded">Commencer</button>
+    <div class="w-1/3 p-2">
+      <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">2</div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <div class="w-1/3 p-2">
+      <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">3</div>
+    </div>
+    <div class="w-1/3 p-2">
+      <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">4</div>
+    </div>
+    <div class="w-1/3 p-2">
+      <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">5</div>
+    </div>
   </div>
-
-  <div class="quizzes text-center">
-  	<ul>
-  	  <li>Quiz 1</li>
-  	  <li>Quiz 2</li>
-  	  <li>Quiz 3</li>
-  	  <li>Quiz 4</li>
-  	  <li>Quiz 5</li>
-  	</ul>
-
-  </div>
-  
-
-  <div class="explanations">
-  	<h3>Explications</h3>
-    Fast and Quizy vous permet de répondre à des quiz crées par les utilisateurs. Les catégories sont aisément reconnaissables à leur couleur. Vous pouvez aussi créer vos propres quiz si vous le désirez !
-    <button class="bg-green-400 hover:bg-green-600 text-black font-bold py-2 px-4 rounded">Découvrir</button>
-
-  </div>
-
+</div>
 {% endblock %}
