footer done. Reste le texte d'explication du site, et la homepage est finie

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -58,9 +58,10 @@
 
   {% block content %}
   {% endblock %}
-
-  <footer class="footer">
-    This is our footer
+  
+  <footer class="footer py-8 flex justify-around">
+      <a class="no-underline font-bold italic hover:text-green-500" href="#">Mentions Legales</a>
+      <a class="no-underline font-bold italic hover:text-green-500" href="#">Licence</a>
   </footer>
 
 </body>
