--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,5 +1,5 @@
 {% extends 'core/base.html' %}
-{% load static %} 
+{% load static %}
 
 {% block title %}Fast & Quizy{% endblock %}
 {% block css %}
@@ -7,30 +7,81 @@
 {% endblock %}
 
 {% block content %}
-<div class='container mx-auto'>
-  <div class="flex content-start flex-wrap bg-gray-200">
-    <div class="w-1/3 p-2">
-      <div class="bg-gray-400 p-2 h-40 rounded-lg">
-        <div class="text-gray-700 text-center truncate">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST
-        </div>
-        <div class="row">
-          <img class="object-none object-bottom pt-16 pl-48" src="../../static/core/img/etoile.png" alt="etoile">
-          <img class="object-none object-bottom" src="../../static/core/img/etoile.png" alt="etoile">
-        </div>
+  <div class="first">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+  
+    <div class="presentation">
+      <h1 class="text-center font-bold italic text-6xl text-gray-300">Fast & Quizy</h1>
+      <p class="text-center text-2xl text-gray-300">
+      	Ici vous pourrez <br>
+      	participer à des quiz dans des domaines variés <br>
+        et obtenir des conseils personnalisés</p>
+    </div>
+    <br>
+    <br>
+    <div class="button">
+      <button class="bg-yellow-400 hover:bg-orange-400 text-white font-bold py-2 px-4 rounded">Commencer</button>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+  </div>
+
+  <div class='container mx-auto py-8'>
+    <div class="text-center font-bold py-4">
+      <h2>Derniers quiz crées</h2>
+    </div>
+    <div class="flex content-start flex-wrap bg-gray-200">
+      <div class="w-1/3 p-2">
+        <div class="bg-gray-400 p-2 h-40 rounded-lg">
+          <div class="text-gray-700 text-center truncate">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST
+          </div>
+          <div class="flex pt-16 justify-center">
+            <img class="px-1 pb-1" src="../../static/core/img/etoile.png" alt="etoile">
+            <img class="px-1 pb-1" src="../../static/core/img/etoile.png" alt="etoile">
+            <img class="px-1 pb-1" src="../../static/core/img/etoile.png" alt="etoile">
+          </div>
+      </div>
+      </div>
+      <div class="w-1/3 p-2">
+        <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">2</div>
+      </div>
+      <div class="w-1/3 p-2">
+        <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">3</div>
+      </div>
+      <div class="w-1/3 p-2">
+        <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">4</div>
+      </div>
+      <div class="w-1/3 p-2">
+        <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">5</div>
       </div>
     </div>
-    <div class="w-1/3 p-2">
-      <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">2</div>
-    </div>
-    <div class="w-1/3 p-2">
-      <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">3</div>
-    </div>
-    <div class="w-1/3 p-2">
-      <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">4</div>
-    </div>
-    <div class="w-1/3 p-2">
-      <div class="text-gray-700 text-center bg-gray-400 p-2 h-40 rounded-lg">5</div>
-    </div>
   </div>
-</div>
+  
+
+  <div class="explanations py-4">
+    <div class="container mx-auto text-center">
+  	 <h3 class="font-bold p-8">Explications</h3>
+     <p class="py-8">
+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+      </p>
+    <button class="bg-green-400 hover:bg-green-600 text-black font-bold py-2 px-4 rounded">Découvrir</button>
+  </div>
+  </div>
+
 {% endblock %}
