--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -8,9 +8,9 @@
 {% endblock %}
 
 {% block content %}
-  <div class="container mx-auto">
+  <div class="container mx-auto py-8">
     {% if form.errors %}
-      <p>Your username and password didn't match. Please try again.</p>
+      <p>Votre identifiant et le mot de passe ne correspondent pas. Veuillez réessayer.</p>
     {% endif %}
   
     {% if next %}
@@ -21,49 +21,31 @@
         <p>Please login to see this page.</p>
         {% endif %}
     {% endif %}
-      <!--
-      <form method="post" action="{% url 'login' %}">
+  <div class="w-full max-w-xs">
+    <form action="{% url 'login' %}" method="post" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
       {% csrf_token %}
-        {{ form.username.label_tag }}
-        {{ form.username }}
-      {{ form.username.label_tag }}
-      
-      {{ form.password.label_tag }}
-      {{ form.password }}
-      
-      <input type="submit" value="login">
-      <input type="hidden" name="next" value="{{ next }}">
-      </form>
+      <div class="mb-4">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="{{ form.username.id_for_label }}">Nom d'utilisateur :</label>
+        <div class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+          {{ form.username }}
+        </div>
       </div>
-      -->
-      <div class="w-full max-w-xs">
-        <form method="post" action="{% url 'login' %}" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-          {% csrf_token %}
-          <div class="mb-4">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
-              Username
-            </label>
-            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="Username">
-          </div>
-        <div class="mb-6">
-          <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
-            Password
-          </label>
-          <input class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="******************">
-          <p class="text-red-500 text-xs italic">Please choose a password.</p>
+      <div class="mb-4">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="{{ form.password.id_for_label }}">Mot de passe :</label>
+        <div class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+          {{ form.password }}
         </div>
-        <div class="flex items-center justify-between">
-          <input type="submit" value="Sign In" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
-          <input type="hidden" name="next" value="{{ next }}">
-          <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="#">
-            Forgot Password?
+      </div>
+      <div class="flex items-center justify-between">
+        <input type="submit" value="Connexion" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+        <input type="hidden" name="next" value="{{ next }}">
+          <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800 px-4" href="#">
+            Mot de passe oublié ?
           </a>
-        </div>
-  </form>
-  <p class="text-center text-gray-500 text-xs">
-    &copy;2020 Acme Corp. All rights reserved.
-  </p>
-</div>
+      </div>
+      <a class="inline-block align-baseline text-sm text-blue-500 hover:text-blue-800 px-4 py-8" href="{% url 'register' %}">Pas encore de compte ? S'inscrire
+      </a>
+    </form>
   </div>
-
+</div>
 {% endblock %}
