--- a/core/templates/core/create.html
+++ b/core/templates/core/create.html
@@ -15,76 +15,100 @@
 </head>
 
 <body>
+  <span>Quiz :</span>
   <form method="POST" action="">
     {% csrf_token %}
-      <div class="tf-form">
-        {{ tf_form.as_p }}
-        <input type="submit" value="J'ai fini !" class="create-quiz">
-      </div>
+    <div class="title-form" id="title-form">
+      {{ title_form.as_p }}
+    <br>
+    <hr>
+    <br>
+    </div>
+    <div class="tf-form" id="tf-form">
+      {{ tf_form.as_p }}
+    <br>
+    <hr>
+    <br>
+    </div>
+    <div class="mc-form" id="mc-form">
+      {{ mc_form.as_p}}
+      <br>
+      <hr>
+      <br>
+    </div>
+      <input type="submit" value="J'ai fini !" class="create-quiz">
+    </div>
   </form>
   <button class="add-tf-form">Ajouter TF</button>
-
-  <form method="POST" action="">
-    {% csrf_token %}
-      <div class="mc-form">
-        {{ mc_form.as_p }}
-        <input type="submit" value="J'ai fini !" class="create-quiz">
-      </div>
-  </form>
   <button class="add-mc-form">Ajouter MC</button>
 
 <script>
 function cloneTF(selector) {
-    var newElement = $(selector).clone(true);
-    total_tf = $('#id_form-TOTAL_FORMS').val();
-    newElement.find(':input:not([type=button]):not([type=submit]):not([type=reset])').each(function() {
-        var name = $(this).attr('name').replace('-' + (total_tf-1) + '-', '-' + total_tf + '-');
-        var id = 'id_' + name;
-        $(this).attr({'name': name, 'id': id}).val('').removeAttr('checked');
-    });
-    newElement.find('label').each(function() {
-        var forValue = $(this).attr('for');
-        if (forValue) {
-          forValue = forValue.replace('-' + (total_tf-1) + '-', '-' + total_tf + '-');
-          $(this).attr({'for': forValue});
-        }
-    });
-    total_tf++;
-    $('#id_form-TOTAL_FORMS').val(total_tf);
-    $(selector).after(newElement);
+  // change the current total number of tf questions
+  total_tf = $('#id_tf-TOTAL_FORMS').val();
 
-    return false;
+  // clone the selected part of the form
+  var newElement = $(selector).clone(true);
+  newElement.find(':input:not([type=button]):not([type=submit]):not([type=reset])').each(function() {
+      var name = $(this).attr('name').replace('-' + (total_tf-1) + '-', '-' + total_tf + '-');
+      var id = 'id_' + name;
+      $(this).attr({'name': name, 'id': id}).val('').removeAttr('checked');
+    });
+  // Update the number of tf questions in the labels
+  newElement.find('label').each(function() {
+    var forValue = $(this).attr('for');
+    if (forValue) {
+      forValue = forValue.replace('-' + (total_tf-1) + '-', '-' + total_tf + '-');
+      $(this).attr({'for': forValue});
+      }
+  });
+  total_tf++;
+  // change the id value of the new tf question
+  $('#id_mc-TOTAL_FORMS').val(total_tf);
+  //place it after the form
+  $(selector).after(newElement);
+  
+  // Change the value of the hidden input order
+  id_order = "id_tf-" + order + "-order";
+  current_order = document.getElementById(id_order);
+  order++;
+  $(current_order).val(order);
+  return false;
+
+  
 }
 
 function cloneMC(selector) {
-    var newElement = $(selector).clone(true);
-    total_mc = $('#id_form-TOTAL_FORMS').val();
-    newElement.find(':input:not([type=button]):not([type=submit]):not([type=reset])').each(function() {
-        var name = $(this).attr('name').replace('-' + (total_mc-1) + '-', '-' + total_mc + '-');
-        var id = 'id_' + name;
-        $(this).attr({'name': name, 'id': id}).val('').removeAttr('checked');
+  
+  total_mc = $('#id_mc-TOTAL_FORMS').val();
+
+  var newElement = $(selector).clone(true);
+  newElement.find(':input:not([type=button]):not([type=submit]):not([type=reset])').each(function() {
+      var name = $(this).attr('name').replace('-' + (total_mc-1) + '-', '-' + total_mc + '-');
+      var id = 'id_' + name;
+      $(this).attr({'name': name, 'id': id}).val('').removeAttr('checked');
     });
-    newElement.find('label').each(function() {
-        var forValue = $(this).attr('for');
-        if (forValue) {
-          forValue = forValue.replace('-' + (total_mc-1) + '-', '-' + total_mc + '-');
-          $(this).attr({'for': forValue});
-        }
-    });
-    total_mc++;
-    $('#id_form-TOTAL_FORMS').val(total_mc);
-    $(selector).after(newElement);
+  newElement.find('label').each(function() {
+    var forValue = $(this).attr('for');
+    if (forValue) {
+      forValue = forValue.replace('-' + (total_mc-1) + '-', '-' + total_mc + '-');
+        $(this).attr({'for': forValue});
+      }
+  });
+  total_mc++;
+  $('#id_mc-TOTAL_FORMS').val(total_mc);
+  $(selector).after(newElement);
 
     return false;
 }
-
+// Add a TrueFalse Question Form
 $(document).on('click', '.add-tf-form', function(e){
     e.preventDefault();
     var form = $(".tf-form").last();
     cloneTF(form);
     return false;
 });
-
+// Add a MultiChoice Question Form
 $(document).on('click', '.add-mc-form', function(e){
     e.preventDefault();
     var form = $(".mc-form").last();
@@ -92,25 +116,28 @@ $(document).on('click', '.add-mc-form', function(e){
     return false;
 });
 
+// set the starting value of the hidden inputs to 0
+var order = 0;
+$("input[name='tf-0-order']").val(order);
+$("input[name='mc-0-order']").val(order);
+
+// hide by default the two forms
+//$('#tf-form').hide();
+//$('#mc-form').hide();
+
+// Prevent submit to update the values of max forms
 $('form').one('submit', function(e) {
   e.preventDefault()
-  $("input[name='form-TOTAL_FORMS']").each(function() {
-    if ($(this).parents('.tf-form')) {
+  // For tf forms
+  $("input[name='tf-TOTAL_FORMS']").each(function() {
       this.value = total_tf
-    } else if ($(this).parents('.mc-form')) {
+  });
+
+  // For mc forms
+  $("input[name='mc-TOTAL_FORMS']").each(function() {
       this.value = total_mc
-    }
   });
-  $("input[name='form-INITIAL_FORMS']").each(function() {
-    this.value = 0
-  });
-  $("input[name='form-MIN_NUM_FORMS']").each(function() {
-    this.value = 0
-  });
-  $("input[name='form-MAX_NUM_FORMS']").each(function() {
-    this.value = 1000
-  });
-  var forms = $("input[name='form-TOTAL_FORMS']");
+
   $(this).submit()
 });
 
