--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -56,15 +56,16 @@
   </header>
 
   {% if messages %}
-    <ul class="messages">
     {% for message in messages %}
-      <li class="{{ message.tags }}">
-        {{ message|safe }}
-        <a href="#" class="close">x</a>
-      </li>
+      <div class="row justify-content-end">
+        <div class="">
+          <div class="alert alert-{{message.tags}}">
+            {{ message }}
+          </div>
+        </div>
+      </div>
     {% endfor %}
-    </ul>
-  {% endif %}
+  {% endif%}
 
   {% block content %}
   {% endblock %}
