--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="{% static 'core/home.css' %}">
 {% endblock %}
 
+
 {% block content %}
   <div class="first">
     <br>
@@ -84,4 +85,8 @@
   </div>
   </div>
 
+{% endblock %}
+
+{% block footer %}
+  {% include 'core/footer.html' %}
 {% endblock %}
