saving questions and quiz ok

--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -24,7 +24,7 @@
       </li>
       {% if user.is_authenticated %}
         <li class="md:ml-4">
-          <a class="block no-underline py-2 hover:text-green-500 font-bold md:border-none md:p-0" href="#"> Mon compte</a>
+          <a class="block no-underline py-2 hover:text-green-500 font-bold md:border-none md:p-0" href="{% url "profile" %}"> Mon compte</a>
         </li>
         <li class="md:ml-4">
           <a class="block no-underline py-2 hover:text-green-500 font-bold md:border-none md:p-0" href="{% url 'logout' %}">Déconnexion</a>
