--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -4,10 +4,14 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
   <title>{% block title %}{% endblock %}</title>
   {% block css %}{% endblock %}
   <link rel="stylesheet" href="{% static 'core/base.css' %}">
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!--<script src="script.js"></script>-->
 </head>
 
