--- a/quiz/templates/quiz/quiz_list.html
+++ b/quiz/templates/quiz/quiz_list.html
@@ -1,3 +1,23 @@
-{% for quiz in object_list %}
-<a href="{% url 'take_quiz' slug=quiz.url %}">{{ quiz.title }}</a>
-{% endfor %}
+{% extends "core/base.html" %}
+{% load static %}
+
+{% block title %}Liste des quiz{% endblock %}
+
+{% block content %}
+<div class="container mx-auto">
+	{% for quiz in object_list %}
+	<div class="flex content-start flex-wrap bg-gray-200">
+		<div class="w-1/3 p-2">
+			<div class="bg-gray-400 p-2 h-40 rounded-lg">
+				<div class="text-gray-700 text-center truncate">
+				    <a href="{% url 'take_quiz' quiz.url %}">{{ quiz.title }}</a>
+			    </div>
+				<div class="flex h-24 justify-center items-end bg-blue-300">
+					<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+					<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+				</div>
+			</div>
+		</div>
+		{% endfor %}
+	</div>
+	{% endblock %}
