--- a/quiz/templates/quiz/quiz_list.html
+++ b/quiz/templates/quiz/quiz_list.html
@@ -5,19 +5,28 @@
 
 {% block content %}
 <div class="container mx-auto">
+	<h1 class="py-4 text-2xl">Liste des quiz créés du plus récent au plus ancien :</h1>
 	{% for quiz in object_list %}
 	<div class="flex content-start flex-wrap bg-gray-200">
 		<div class="w-1/3 p-2">
-			<div class="bg-gray-400 p-2 h-40 rounded-lg">
+			<div class="bg-blue-300 p-2 h-40 rounded-lg">
 				<div class="text-gray-700 text-center truncate">
 				    <a href="{% url 'take_quiz' quiz.url %}">{{ quiz.title }}</a>
 			    </div>
-				<div class="flex h-24 justify-center items-end bg-blue-300">
-					<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
-					<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+				<div class="flex h-24 justify-center items-end">
+					{% if quiz.difficulty == 1 %}
+					  <img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+					{% elif quiz.difficulty == 2%}
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+					{% elif quiz.difficulty == 3 %}
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+					{% endif %}
 				</div>
 			</div>
 		</div>
-		{% endfor %}
+	{% endfor %}
 	</div>
-	{% endblock %}
+{% endblock %}
