--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -12,9 +12,84 @@
 	<button>Créer un quiz</button>
 </a>
 
+<ul class="flex border-b">
+	<li class="-mb-px mr-1">
+		<a class="bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-blue-700 font-semibold" href="#" id='participated'>Quiz passés</a>
+	</li>
+	<li class="mr-1">
+		<a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="#" id='created'>Quiz créés</a>
+	</li>
+</ul>
 
-{% endblock %}
+<div class="container mx-auto">
+	<div id="quiz-participated">
+		{% for quiz in quiz_participated %}
+		<div class="flex content-start flex-wrap bg-gray-200">
+			<div class="w-1/3 p-2">
+				<div class="bg-blue-300 p-2 h-40 rounded-lg">
+					<div class="text-gray-700 text-center truncate">
+						<a href="{% url 'take_quiz' quiz.url %}">{{ quiz.title }}</a>
+					</div>
+					<div class="flex h-24 justify-center items-end">
+						{% if quiz.difficulty == 1 %}
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+						{% elif quiz.difficulty == 2%}
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+						{% elif quiz.difficulty == 3 %}
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+						<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+						{% endif %}
+					</div>
+				</div>
+			</div>
+			{% endfor %}
+		</div>
+		<div id="quiz-created">
+			{% for quiz in quiz_created %}
+			<div class="flex content-start flex-wrap bg-gray-200">
+				<div class="w-1/3 p-2">
+					<div class="bg-blue-300 p-2 h-40 rounded-lg">
+						<div class="text-gray-700 text-center truncate">
+							<a href="{% url 'take_quiz' quiz.url %}">{{ quiz.title }}</a>
+						</div>
+						<div class="flex h-24 justify-center items-end">
+							{% if quiz.difficulty == 1 %}
+							<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+							{% elif quiz.difficulty == 2%}
+							<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+							<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+							{% elif quiz.difficulty == 3 %}
+							<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+							<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+							<img src="{% static "quiz/img/etoile.png" %}" alt="etoile">
+							{% endif %}
+						</div>
+					</div>
+				</div>
+				{% endfor %}
+			</div>
+		</div>
 
-{% block footer %}
-  {% include 'core/footer.html' %}
-{% endblock %}
+		<script>
+		$("#quiz-created").hide();
+
+		$('a').click( function(e) {
+			e.preventDefault();
+			if (this.id == 'participated') {
+				$("#quiz-participated").show();
+				$("#quiz-created").hide();
+			} else if (this.id == 'created') {
+				$("#quiz-participated").hide();
+				$("#quiz-created").show();
+			}
+			/*your_code_here;*/ 
+			return false; } );
+		</script>
+
+		{% endblock %}
+
+		{% block footer %}
+		{% include 'core/footer.html' %}
+		{% endblock %}
